fix: flickering layout fix and prevent duplicate fetches

--- a/index.css
+++ b/index.css
@@ -7,3 +7,8 @@
 
   --font-delius: "Delius", cursive;
 }
+
+html {
+  overflow-y: scroll;
+  scrollbar-gutter: stable;
+}
